--- a/Set/Base.lproj/Main.storyboard
+++ b/Set/Base.lproj/Main.storyboard
@@ -289,6 +289,9 @@
                                     <constraint firstAttribute="width" priority="750" constant="200" id="6xn-Mz-tDC"/>
                                     <constraint firstAttribute="width" secondItem="wDX-Qx-VHX" secondAttribute="height" multiplier="64:89" id="Pyh-4I-NAa"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isFaceUp" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
